# CTC

./: .gitignore  README.md  bot.py  logger.py  requirements.txt  table.py
hr/: Cargo.toml
hr/.sqlx/: query-192a1320f3fdba29a2bfb05c003cda4b136f97c02bf9b7478e7bbeab9d6f93e9.json  query-79b1551885ebd7c2a4b08de0322757d3f3d63187128353adb20f77d16949078f.json  query-7d34bc773fe792adaa321cc809f22c01329f3cf82488290591aaa36eba64ccee.json  query-915fee5907694273ef5413d2812b99c3724597e09d4fc7bba2a27e196ce11d3b.json
hr/migrations/: 20250219234848_create_users_table.sql
hr/src/: main.rs
