[package]
name = "hr"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
teloxide = { version = "0.13", features = ["macros"] }
# reqwest = "0.12"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
